Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-720

Parquet-cpp fails to link when included in multiple TUs

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.0.0
    • parquet-cpp
    • None

    Description

      When reader.h is included in multiple cpp files, it causes a linker error
      because ScanAllValues is defined in multiple TUs

      The solution is to move the definition of ScanAllValues to a separate cc file.

      Attachments

        Activity

          People

            florian.scheibner Florian Scheibner
            florian.scheibner Florian Scheibner
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: