PARQUET-720: Mark ScanAllValues as inline to prevent link error

Closes #161

Author: Uwe L. Korn <uwelk@xhochy.com>
Author: fscheibner <florian.scheibner@snowflake.net>

Closes #163 from xhochy/PARQUET-720 and squashes the following commits:

4d3125d [Uwe L. Korn] Add ScanAllValues to parquet namespace
b2c9ff1 [Uwe L. Korn] Format fixes
8f91550 [fscheibner] Move ScanAllValues to scan-all.cc
60dec35 [fscheibner] Mark ScanAllValues as inline to prevent link error

Change-Id: Ide0c58ae3c5622a615c3732f72709c7ca37453dc